Update size body

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ http {
     server {
         listen 80;
         server_name 85.209.9.241;
+        client_max_body_size 100M;
 
         location / {
             proxy_pass http://web:8000;
